<resources>
    <string name="app_name">randomUITest</string>
    <string name="place_top">Shirt</string>
    <string name="place_over">Jacket</string>
    <string name="place_bot">Trousers</string>
    <string name="rand">Randomise</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="item_add">add item</string>
    <string name="title_activity_item_add">itemAdd</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>